Fixed the image not showing, added padding to the divs hopefully

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ nav {
 
 nav a {
     width: 33%;
+    font-size: 10px;
 }
 
 footer {
@@ -20,6 +21,7 @@ div {
     border-bottom: darkgray;
     border-top: darkgray;
     text-align: left;
+    padding-bottom: 20px;
 }
 
 h2 {
